# opspilot-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: api.py  embeddings_client.py  kb_indexer.py  llm_client.py  main.py  rag.py  retriever.py  router.py  schemas.py  vector_utils.py
app/agent/: memory.py  orchestrator.py  prompts.py  schemas.py
app/tools/: kb.py  ticket_generator.py  ticketing.py
kb/: README.md
kb/policies/: booking_policy.txt
kb/services/: pricing.txt  services.txt
kb/studio/: about.txt  contact.txt  hours_location.txt
static/: styles.css
templates/: index.html
